# code2things

./: .gitignore  README.md  helloWorld.cpp  项目介绍.docx  项目简介（change it）
assignment/1/: 2019113203-bottom.stl  2019113203-cover.stl  2019114465-bottom.stl  2019114465-cover.stl  2019114468-bottom.stl  2019114468-cover.stl  毕凯斌底盖.stl  毕凯斌盒盖.stl
assignment/2/: README.md
assignment/2/covid19_visualizer/: Area.pde  Map.pde  Timer.pde  area.pde  covid19_visualizer.pde
assignment/3/: README.md
assignment/3/danmaku-frontend/: Cargo.toml  make-app.sh  make-dmg.sh  release.sh
assignment/3/danmaku-frontend/src/: main.rs
assignment/3/danmaku-management-py/: README.md  blivedm.py  cookies.py  judge.py  ki_logger.py  logger-test.py  logger.py  main.py  requirements.txt
assignment/3/danmaku-management-py/tools/: blivedm.py  ki_logger.py  me.py
assignment/3/kotlin_ver/: build.gradle.kts  settings.gradle.kts
assignment/3/python3_ver/: README.md  db_add_black.py  db_add_question.py  db_confirm.py  db_get_black.py  db_judge.py  drop_miss_black.py  drop_white.py  exam_fun.py  file.txt  file2.txt  requirements.txt
assignment/3/ruby2.6_ver/: db_add_black.rb  db_add_question.rb  db_confirm.rb  db_get_black.rb  db_judge.rb  drop_miss_black.rb  drop_white.rb  fliter.rb
