[package]
name = "danmaku-frontend"
version = "0.1.0"
authors = ["imkiva <libkernelpanic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.2.21"
crossterm = "0.17"
tui = { version = "0.9.5", default-features = false, features = ['crossterm'] }
